<resources>
    <string name="app_name">Ez Linear Regression</string>
    <string name="btnCapturar">Capturar columna x</string>
    <string name="txtPruebaX">pruebaEsto</string>
    <string name="apunte_a_un_texto">Apunte a una columna primero</string>
    <string name="btnCapturarColumnaY">Capturar columna Y</string>
    <string name="txtPruebaY">pruebaesto</string>
    <string name="txtSumaX2">txtSumaX2</string>
    <string name="txtSumaY2">txtSumaY2</string>
    <string name="txtsumaXY">txtsumaXY</string>
    <string name="txtPendiente">txtPendiente</string>
    <string name="txtInterseccion">txtInterseccion</string>
    <string name="btnContinuarConfirmacionDeNumeros">Exportar resultados</string>
    <string name="txtPreguntaCreacionArchivo">¿Qué desea hacer?</string>
    <string name="btnCrearExcel">Crear Excel</string>
    <string name="btnCrearTxt">Crear txt</string>
    <string name="btnCrearPDF">Crear PDF</string>
    <string name="btnAcercaDe">Acerca de</string>
    <string name="btnProcederACamara">Capturar imagen</string>
    <string name="txtTituloApp">Ez Linear Regression</string>
    <string name="btnVolverAMenuPrincipal">Volver</string>
    <string name="txtDescripcionApp">Algun texto</string>
    <string name="txtr2">TextView</string>
    <string name="txtr">TextView</string>
    <string name="txtTituloAcercaDe">Acerca de</string>
    <string name="btnContinuarADesarrollo">Mostrar paso a paso</string>
    <string name="btnVolverDesdePasoAPaso">Volver</string>
    <string name="txtPasoAPaso">Paso a Paso</string>
    <string name="btnVolverDesdeCreacionDeArchivo">Volver</string>
    <string name="txtPasoAPasoDetallado">pasoAPaso</string>
    <string name="txtTituloConfirmacionDeNumeros">Resumen</string>
    <string name="btnVerHistorial">ver historial</string>
    <string name="btnVolverDesdeHistorial">Volver</string>
    <string name="btnVerArchivos">ver archivos</string>
    <string name="btnIngresarNumeros">Ingresar numeros</string>
    <string name="btnVolverDesdeIngresoManual">Volver</string>
    <string name="txtTituloIngresoManual">Ingreso manual</string>
    <string name="txtColumnaX">Columna X</string>
    <string name="txtColumnaY">Columna Y</string>
    <string name="btnCalcular">Calcular</string>
    <string name="txtFieldColumnaX" />
    <string name="txtFieldColumnaY" />
    <string name="btnOpciones">opciones</string>
    <string name="btnVolverDesdeOpciones">Volver</string>
    <string name="btnCeleste">cambiar color a celeste</string>
    <string name="btnRosa">cambiar color a rosa</string>
    <string name="btnAmarillo">cambiar color a naranjo</string>
    <string name="txtDesviacionEstandarY">txtDesviacionEstandarY</string>
    <string name="txtDesviacionEstandarX">txtDesviacionEstandarX</string>
    <string name="txtTituloVerHistorial">Historial</string>
    <string name="btnVerGrafico">Ver grafico</string>
    <string name="btnVolverDesdeGrafico">Volver</string>
    <string name="txtTituloGrafico">Gráfico</string>
    <string name="btnLogIn">Ingresar</string>
    <string name="btnLogOut">Salir</string>
    <string name="btnVolverAMenuPrincipalDesdeResumen">Menú principal</string>
    <string name="btnProyectar">usar ecuación de la recta</string>
    <string name="btnCalcularResultado">Calcular</string>
    <string name="btnVolverDesdeER">Volver</string>
    <string name="subir_archiv">subir archivo</string>
    <string name="txtTituloGraficoPosiciones">Grafico de posiciones</string>
    <string name="txtGraficoRecta">Gráfico de recta</string>
</resources>
