<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMenuPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".MenuPrincipal">

    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="44dp"
        android:text="@string/btnAcercaDe"
        app:layout_constraintBottom_toTopOf="@+id/btnProcederACamara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTituloApp" />

    <Button
        android:id="@+id/btnProcederACamara"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginBottom="29dp"
        android:text="@string/btnProcederACamara"
        app:layout_constraintBottom_toTopOf="@+id/btnIngresarNumeros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="45dp"
        android:text="@string/txtTituloApp"
        android:textColor="@android:color/white"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVerHistorial"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="41dp"
        android:text="@string/btnVerHistorial"
        app:layout_constraintBottom_toTopOf="@+id/btnCrearCarp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresarNumeros" />

    <Button
        android:id="@+id/btnIngresarNumeros"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:text="@string/btnIngresarNumeros"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOpciones"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="13dp"
        android:text="@string/btnOpciones"
        app:layout_constraintBottom_toTopOf="@+id/btnLogOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubirArchivo" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnLogIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnOpciones" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="16dp"
        android:onClick="signOut"
        android:text="@string/btnLogOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCrearCarp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="142dp"
        android:onClick="createFolder"
        android:text="crearCarpeta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSubirArchivo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresarNumeros" />

    <Button
        android:id="@+id/btnSubirArchivo"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="8dp"
        android:onClick="uploadFile"
        android:text="@string/subir_archiv"
        app:layout_constraintBottom_toBottomOf="@+id/btnCrearCarp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCrearCarp"
        app:layout_constraintTop_toBottomOf="@+id/btnVerHistorial" />
</androidx.constraintlayout.widget.ConstraintLayout>