<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".IngresoManual">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="702dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTituloIngresoManual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="41dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/txtTituloIngresoManual"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/txtFieldColumnaX"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtColumnaX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginBottom="11dp"
                android:text="@string/txtColumnaX"
                app:layout_constraintBottom_toBottomOf="@+id/txtFieldColumnaX"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtColumnaY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginBottom="10dp"
                android:text="@string/txtColumnaY"
                app:layout_constraintBottom_toBottomOf="@+id/txtFieldColumnaY"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txtFieldColumnaX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="34dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="Columna X"
                android:inputType="textPersonName"
                android:text="@string/txtFieldColumnaX"
                app:layout_constraintStart_toEndOf="@+id/txtColumnaX"
                app:layout_constraintTop_toBottomOf="@+id/txtTituloIngresoManual" />

            <EditText
                android:id="@+id/txtFieldColumnaY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="9dp"
                android:ems="10"
                android:hint="Columna Y"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@string/txtFieldColumnaY"
                app:layout_constraintStart_toStartOf="@+id/txtFieldColumnaX"
                app:layout_constraintTop_toBottomOf="@+id/txtFieldColumnaX" />

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginTop="114dp"
                android:text="@string/btnCalcular"
                app:layout_constraintStart_toStartOf="@+id/txtFieldColumnaY"
                app:layout_constraintTop_toBottomOf="@+id/txtFieldColumnaY" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnVolverDesdeIngresoManual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnVolverDesdeIngresoManual" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>