<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMenuOpciones"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".MenuOpciones">

    <Button
        android:id="@+id/btnVolverDesdeOpciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnVolverDesdeOpciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAmarillo" />

    <Button
        android:id="@+id/btnCeleste"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="94dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnCeleste"
        app:layout_constraintBottom_toTopOf="@+id/btnRosa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRosa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btnRosa"
        app:layout_constraintBottom_toTopOf="@+id/btnAmarillo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCeleste" />

    <Button
        android:id="@+id/btnAmarillo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="359dp"
        android:text="@string/btnAmarillo"
        app:layout_constraintBottom_toTopOf="@+id/btnVolverDesdeOpciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRosa" />

</androidx.constraintlayout.widget.ConstraintLayout>