<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".CapturaActivity">

    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="412dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCapturarColumnaX"
        app:layout_constraintStart_toEndOf="@+id/btnCapturarColumnaX"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="646dp"
        android:text="@string/apunte_a_un_texto"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCapturarColumnaX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCapturarColumnaX"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:text="@string/btnCapturar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <Button
        android:id="@+id/btnCapturarColumnaY"
        android:layout_width="206dp"
        android:layout_height="60dp"
        android:layout_marginEnd="6dp"
        android:text="@string/btnCapturarColumnaY"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCapturarColumnaX"
        app:layout_constraintEnd_toEndOf="@+id/surface_view" />


</androidx.constraintlayout.widget.ConstraintLayout>