<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".AcercaDe">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTituloAcercaDe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTituloAcercaDe" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtDescripcionApp"
                android:layout_width="match_parent"
                android:layout_height="213dp"
                android:text="@string/txtDescripcionApp"
                tools:layout_editor_absoluteX="81dp"
                tools:layout_editor_absoluteY="157dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="495dp"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/btnVolverAMenuPrincipal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnVolverAMenuPrincipal"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="681dp" />


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>